# autonomous-parcel-routing

./: .gitignore  README.md  SETUP.md  USAGE.md  pyproject.toml  requirements.txt  verify_setup.py
cfg/: baseline.yaml  double_q_learning.yaml  sarsa.yaml
notebooks/: 01_exploration.ipynb  02_training_walkthrough.ipynb  03_results_visualization.ipynb  04_double_q_learning_training.ipynb  05_agent_validation.ipynb  06_agent_comparison.ipynb  07_q_learning_complete.ipynb  08_sarsa_complete.ipynb  09_sarsa_lambda_complete.ipynb
src/: compare_algorithms.py  evaluate_agents.py  validate_agent.py
src/apr/: __init__.py  env.py  evaluate.py  logger.py  train.py  validation.py
src/apr/agents/: __init__.py  base.py  double_q_learning.py  q_learning.py  registry.py  sarsa.py
src/apr/resources/: __init__.py
src/apr/utils/: __init__.py  viz.py
